--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "next build --turbopack",
-    "start": "next start"
+    "build": "next build",
+    "start": "next start",
+    "vercel-build": "next build"
   },
   "dependencies": {
+    "@sparticuz/chromium": "^131.0.0",
     "axios": "^1.11.0",
     "date-fns": "^4.1.0",
     "jspdf": "^3.0.2",
@@ -15,6 +17,7 @@
     "mongoose": "^8.18.0",
     "next": "15.5.2",
     "puppeteer": "^24.19.0",
+    "puppeteer-core": "^24.19.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hot-toast": "^2.6.0",
