--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.11.0",
     "date-fns": "^4.1.0",
     "jspdf": "^3.0.2",
+    "jszip": "^3.10.1",
     "lucide-react": "^0.542.0",
     "mongoose": "^8.18.0",
     "next": "15.5.2",
