--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@sparticuz/chromium": "^131.0.0",
     "axios": "^1.11.0",
     "date-fns": "^4.1.0",
+    "html2canvas": "^1.4.1",
+    "jsdom": "^27.1.0",
     "jspdf": "^3.0.2",
     "jszip": "^3.10.1",
     "lucide-react": "^0.542.0",
@@ -27,6 +29,7 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/jsdom": "^27.0.0",
     "tailwindcss": "^4"
   }
 }
